# juno-axelar-gmp-contract

./: .gitignore  Cargo.toml  README.md
src/: contract.rs
