[package]
name = "send-receive"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.4.1"
cosmwasm-std = "1.4.1"
cosmwasm-storage = "1.4.1"
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
ethabi = { version = "18.0.0", default-features = false, features = [] }
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }
serde-json-wasm = "1.0.0"
prost = {version = "0.12.1", default-features = false, features = ["prost-derive"]}
osmosis-std-derive = "0.16.2"
osmosis-std = "0.19.2"
cw-utils = "1.0.2"

[dev-dependencies]
cw-multi-test = "0.16.2"
